--- a/TicketApi/appsettings.Development.json
+++ b/TicketApi/appsettings.Development.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "IdentityConnection": "Server=localhost, 1433;Initial Catalog=IdentityDb;User ID=sa;Password=49R8MXw#49c6wT9Q8!",
     "ApplicationConnection": "Server=localhost, 1433;Initial Catalog=TicketDb;User ID=sa;Password=49R8MXw#49c6wT9Q8!"
+  },
+  "JWT": {
+    "Secret": "The wise speak only of what they know."
   }
 }
